--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    екранування це метод для виведення спец символів 
+    функцію можна оголосити чирез зміну чи без неї 
+    hoisting - це концепіція яка обробляє об'яви зміних та функцій та їх зону видимості
+    для зміних: коли ми оголошуємо var то вона глобальна але якщо ми її викликаємо до її об'явлення то вона буде undefined, а let і const то до них не можна достукатись до їх оголошення 
+    для функцій: функцію можна викликати будь де навіть до її об'явлення 
     <script src="./script.js"></script>
 </body>
 </html>
